Make the helper app dialog report the correct mime type after we've tried to use extensions to guess the type.  Bug 78943, r=law, sr=mscott